k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kino-kiii
  labels:
    app: kino
